# cmake-avr

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md  avr-gcc-config.cmake  avr-gcc.cmake
example/: CMakeLists.txt
scripts/: avr-gcc-config.cmake  avr-gcc.cmake
